Numeros de Emergencia

--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -9,6 +9,7 @@
         <!-- BOOTSTRAP -->
         <link rel="stylesheet" href="../css/bootstrap.min.css">
         <script src="../js/bootstrap.min.js"></script>
+        <script src="https://kit.fontawesome.com/c92118d447.js" crossorigin="anonymous"></script>
         <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Merienda&display=swap" rel="stylesheet">
@@ -147,6 +148,15 @@
             </div>
         </form>
     </div>
+    <section>
+        <ul class="numEmergencia">
+            <i class="fas fa-ambulance"> Hospital <i class="fas fa-phone-alt"></i> 107</i>
+            <i class="fas fa-taxi"> Policía <i class="fas fa-phone-alt"></i> 911</i>
+            <i class="fas fa-fire-extinguisher"> Bomberos <i class="fas fa-phone-alt"></i> 100</i>
+            <i class="fas fa-shield-alt"> Defensa Civil <i class="fas fa-phone-alt"></i> 103</i>
+            <i class="fas fa-user-friends"> Políticas de Genero <i class="fas fa-phone-alt"></i> 144</i>
+        </ul>
+    </section>
     <footer>
         <div class="pie">
             <p class="hijo1">Creado por <a id="link" href="https://www.instagram.com/chinoarce0/?hl=es" target="_blank">Guido Arce</a></p>
